syntax = "proto3";

package loginrpc;

// The loing service definition.
service LoginRpc {
  // Sends a login
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
